Fix retrofees modal in dark mode (#378)
* Fix retrofees modal in dark mode

* Fix hr color

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -53,7 +53,7 @@ html[data-dark='true'] {
   }
 
   hr {
-      border-color: map-get($palette, slate);
+    border-color: map-get($palette, black);
   }
 
   .menu__content,
@@ -71,6 +71,7 @@ html[data-dark='true'] {
     border: 0;
   }
 
+  .retrofees,
   .card,
   .modal {
     background-color: $darkless;
